# genomica-cachoril

./: .gitignore  README.md  pyproject.toml
data/processed/: accessions_coordinates.csv  morfometricos.csv
data/raw/: Datos Cytb y Mc1r Hague y Routman, 2015.xlsx  cytb.txt  mc1r.txt  morfometricos.xlsx
docs/: plan-de-trabajo.md
nbs/: amova.ipynb  anova_javier.ipynb  bootstrap.ipynb  data.ipynb  marcel_pca_distancias.ipynb  phylogeny_tree.ipynb
results/: aligned_sequences.fasta  tree_nj.nwk
results/bootstrap/: pca_clust.html
results/marcel/: resumen_pca_distancias.csv
scripts/: build_accessions_coordinates.py
src/genomica_cachoril/: __init__.py
