[project]
name = "genomica-cachoril"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.87",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]

[project.scripts]
genomica-cachoril = "genomica_cachoril:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
